--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1916,11 +1916,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Translated_Review</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Sentiment_Polarity</th>\n",
+       "      <th>Sentiment_Subjectivity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>I like eat delicious food. That's I'm cooking ...</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.533333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>This help eating healthy exercise regular basis</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.288462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Works great especially going grocery store</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Best idea us</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     App                                  Translated_Review  \\\n",
+       "0  10 Best Foods for You  I like eat delicious food. That's I'm cooking ...   \n",
+       "1  10 Best Foods for You    This help eating healthy exercise regular basis   \n",
+       "2  10 Best Foods for You                                                NaN   \n",
+       "3  10 Best Foods for You         Works great especially going grocery store   \n",
+       "4  10 Best Foods for You                                       Best idea us   \n",
+       "\n",
+       "  Sentiment  Sentiment_Polarity  Sentiment_Subjectivity  \n",
+       "0  Positive                1.00                0.533333  \n",
+       "1  Positive                0.25                0.288462  \n",
+       "2       NaN                 NaN                     NaN  \n",
+       "3  Positive                0.40                0.875000  \n",
+       "4  Positive                1.00                0.300000  "
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "google_review.head()\n"
    ]
   },
   {
@@ -1947,11 +2041,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "review_missing_removed = google_review.dropna()\n"
    ]
   },
   {
@@ -1963,11 +2057,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bowmasters                                            312\n",
+       "Helix Jump                                            273\n",
+       "Angry Birds Classic                                   273\n",
+       "Calorie Counter - MyFitnessPal                        254\n",
+       "Candy Crush Saga                                      240\n",
+       "Duolingo: Learn Languages Free                        240\n",
+       "Garena Free Fire                                      222\n",
+       "8 Ball Pool                                           219\n",
+       "Calorie Counter - Macros                              200\n",
+       "10 Best Foods for You                                 194\n",
+       "CBS Sports App - Scores, News, Stats & Watch Live     192\n",
+       "Google Photos                                         191\n",
+       "Alto's Adventure                                      175\n",
+       "8fit Workouts & Meal Planner                          171\n",
+       "DRAGON BALL LEGENDS                                   167\n",
+       "Candy Crush Soda Saga                                 166\n",
+       "Clash Royale                                          165\n",
+       "Adobe Acrobat Reader                                  162\n",
+       "Episode - Choose Your Story                           160\n",
+       "Block Puzzle                                          154\n",
+       "Flow Free                                             154\n",
+       "Bubble Shooter                                        145\n",
+       "Calorie Counter - MyNetDiary                          139\n",
+       "Agar.io                                               136\n",
+       "Cooking Fever                                         135\n",
+       "Calorie Counter & Diet Tracker                        135\n",
+       "Galaxy Attack: Alien Shooter                          134\n",
+       "Gardenscapes                                          133\n",
+       "Colorfy: Coloring Book for Adults - Free              133\n",
+       "Facebook                                              132\n",
+       "                                                     ... \n",
+       "Google Primer                                           2\n",
+       "Amazon Prime Video                                      2\n",
+       "Calendar Widget Month + Agenda                          2\n",
+       "Calculator with Percent (Free)                          2\n",
+       "3D Live Neon Weed Launcher                              2\n",
+       "Draw In                                                 1\n",
+       "Fruit Block - Puzzle Legend                             1\n",
+       "Free Live Talk-Video Call                               1\n",
+       "CBS News                                                1\n",
+       "Apartment Decorating Ideas                              1\n",
+       "CallApp: Caller ID, Blocker & Phone Call Recorder       1\n",
+       "HD Camera                                               1\n",
+       "HomeWork                                                1\n",
+       "Bed Time Fan - White Noise Sleep Sounds                 1\n",
+       "Calculator - unit converter                             1\n",
+       "Google Trips - Travel Planner                           1\n",
+       "Draw a Stickman: EPIC 2                                 1\n",
+       "Caf - Mon Compte                                        1\n",
+       "Drawing for Kids Learning Games for Toddlers age 3      1\n",
+       "Daily Workouts - Exercise Fitness Routine Trainer       1\n",
+       "Caller ID +                                             1\n",
+       "Calendar+ Schedule Planner App                          1\n",
+       "Discover Mobile                                         1\n",
+       "GPS Map Free                                            1\n",
+       "Draw A Stickman                                         1\n",
+       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
+       "Best Fiends - Free Puzzle Game                          1\n",
+       "Google Slides                                           1\n",
+       "All-in-One Mahjong 3 FREE                               1\n",
+       "DashClock Widget                                        1\n",
+       "Name: App, Length: 865, dtype: int64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "review_missing_removed['App'].value_counts()\n"
    ]
   },
   {
@@ -1996,9 +2162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code below\n",
     "\n",
@@ -2012,7 +2189,10 @@
     "    Returns:\n",
     "        The number of occurrences of `Positive` in the column data.\n",
     "    \"\"\"\n",
-    "    return 0"
+    "    occurrences = np.where(x == 'Positive')\n",
+    "    return len(occurrences[0])\n",
+    "\n",
+    "positive_function(review_missing_removed['Sentiment'])\n"
    ]
   },
   {
@@ -2036,11 +2216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/emachado/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: using a dict on a Series for aggregation\n",
+      "is deprecated and will be removed in a future version\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "google_agg = review_missing_removed.groupby(['App']).Sentiment.agg({'Positive' : positive_function, 'Total' : 'count'})\n"
    ]
   },
   {
@@ -2052,11 +2242,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total\n",
+       "App                                              \n",
+       "10 Best Foods for You                  162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
+       "11st                                    23     39\n",
+       "1800 Contacts - Lens Store              64     80\n",
+       "1LINE – One Line with One Touch         27     38"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "google_agg.head()\n"
    ]
   },
   {
